--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  url_launcher: ^6.1.7
+  shared_preferences: ^2.0.15
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
