--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.1.7
   shared_preferences: ^2.0.15
   dio: ^4.0.6
+  flutter_screenutil: ^5.6.0
 
 dev_dependencies:
   flutter_test:
