--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.15
   dio: ^4.0.6
   flutter_screenutil: ^5.6.0
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
