--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dio: ^4.0.6
   flutter_screenutil: ^5.6.0
   flutter_easyloading: ^3.0.5
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
