--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_screenutil: ^5.6.0
   flutter_easyloading: ^3.0.5
   logger: ^1.1.0
-  anim_search_bar: ^2.0.2
+  material_floating_search_bar: ^0.3.7
 
 dev_dependencies:
   flutter_test:
